<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_blue"
    tools:context=".RegisterActivity">

    <ImageView
        android:id="@+id/app_icon"
        android:layout_width="175dp"
        android:layout_height="175dp"
        android:background="@drawable/ic_round_sports_esports_200dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/text_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:minWidth="250dp"
        android:textColor="@color/white"
        android:backgroundTint="@color/white"
        android:hint="@string/edit_text_login"
        android:textColorHint="@color/white"
        android:inputType="text"
        android:autofillHints="username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/app_icon"
        />

    <EditText
        android:id="@+id/text_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:minWidth="250dp"
        android:layout_marginTop="30dp"
        android:textColor="@color/white"
        android:backgroundTint="@color/white"
        android:hint="@string/edit_text_email"
        android:textColorHint="@color/white"
        android:inputType="textEmailAddress"
        android:autofillHints="emailAddress"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_username"
        />

    <EditText
        android:id="@+id/text_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:minWidth="250dp"
        android:layout_marginTop="30dp"
        android:textColor="@color/white"
        android:backgroundTint="@color/white"
        android:hint="@string/edit_text_password"
        android:textColorHint="@color/white"
        android:inputType="textPassword"
        android:autofillHints="password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_email"
        />

    <EditText
        android:id="@+id/text_confirm_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:minWidth="250dp"
        android:layout_marginTop="30dp"
        android:textColor="@color/white"
        android:backgroundTint="@color/white"
        android:hint="@string/edit_text_confirm_password"
        android:textColorHint="@color/white"
        android:inputType="textPassword"
        android:autofillHints="password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_password"
        />

    <Button
        android:id="@+id/button_confirm"
        android:layout_width="125dp"
        android:layout_height="70dp"
        android:layout_marginStart="45dp"
        android:backgroundTint="@color/teal_200"
        android:text="@string/button_confirm"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_confirm_password"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/button_signup"
        android:layout_width="120dp"
        android:layout_height="70dp"
        android:layout_marginEnd="45dp"
        android:backgroundTint="@color/teal_200"
        android:text="@string/button_return"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_confirm_password"
        tools:ignore="TextContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>